# HoughLine

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  config.yaml  hough_lines.cpp  hough_lines.h  hough_lines2.cpp  main.cpp  utils.cpp  utils.h
compare/: CMakeLists.txt  compare.cpp  compare_acc.txt  compare_time.txt  config_compare.yaml
example_code/: CMakeLists.txt  config_cowling.yaml  config_example.yaml  config_sample.yaml  example_with_cowling_images.cpp  example_with_example_images.cpp  example_with_sample_images.cpp
experiment/: CMakeLists.txt  Time_and_Results_black.txt  Time_and_Results_white.txt  config.yaml  config_cl.yaml  detect_circles_and_lines.cpp  detect_lines_in_cap.cpp  tools.cpp
test/: AccumulateTests.cpp  CMakeLists.txt  ExtractLinesTests.cpp  InputTests.cpp  PrepareAMTests.cpp
